[package]
name = "uip-node"
version = "0.1.0"
edition = "2021"

description = "Minimal UIP node for peer-to-peer content hosting and blockchain DNS integration."

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
libp2p = { version = "0.53", features = ["tcp", "mdns", "noise", "yamux", "tokio", "dns"] }
tokio = { version = "1.37", features = ["full"] }
futures-util = "0.3"

[[bin]]
name = "uip-node"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
